tests/gateway-api-migration/fixtures/master-minion-orphan-minion/input/common.service/overlays/dev/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
  - unknown-nginx-ingress.yaml
