tests/gateway-api-migration/fixtures/master-minion-orphan-minion/input/common.service/overlays/dev/unknown-nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unknown-nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dev-unknown.example.com
      http:
        paths:
          - backend:
              service:
                name: unknown-service
                port:
                  number: 80
            path: /
            pathType: Prefix
